--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,11 @@ services:
     ports:
       - "5000:3000"
     volumes:
-      - /app/node_modules
-      - .:/app
+      - ./src:/app/src
   tests:
     build:
       context: .
       dockerfile: Dockerfile.dev
     volumes:
-      - /app/node_modules
-      - .:/app
+      - ./src:/app/src
     command: ["npm", "run", "test"]
